address text and focus contrast issues

--- a/app/assets/stylesheets/_globals.scss
+++ b/app/assets/stylesheets/_globals.scss
@@ -10,6 +10,8 @@ $footer-bgcolor: #00274C;
 $header-bgcolor: #00274C;
 $body-bgcolor:   #F2F2F2;
 
+$link-decoration: underline;
+
 $image-viewer-bgcolor: #323333;
 
 $base-fonts: 'Open Sans', sans-serif;
