--- a/app/assets/stylesheets/bootstrap-variables.scss
+++ b/app/assets/stylesheets/bootstrap-variables.scss
@@ -19,6 +19,12 @@ $body-bg: $body-bgcolor;
 $link-color: #126dc1;
 $link-active-color: #0c5292;
 $link-focus-color: rgb(94, 158, 214);
+$link-decoration: underline;
+
+$pagination-focus-outline: 0;
+$pagination-focus-box-shadow: 0 0 0 2px #FFCB05, 0 0 0 3px #212B36; 
+$btn-focus-box-shadow: 0 0 0 2px #FFCB05, 0 0 0 3px #212B36;
+// border-radius: 2px !important;
 
 $primary: $link-color;
 
