--- a/app/assets/stylesheets/modules/buttons.scss
+++ b/app/assets/stylesheets/modules/buttons.scss
@@ -7,7 +7,7 @@
     box-shadow: inset 0 -2px 0 0 rgba(0, 0, 0, 0.36);
     // box-shadow: inset 0 -2px 0 0 rgba(0, 0, 0, 0.48);
 
-    &:hover, &:focus, &.focus {
+    &:hover, &.focus { // &:focus
         // background: #353535;
         background: #4e4e4e;
         color: #EEE;
@@ -59,10 +59,11 @@
         background-color: #0c5292;
     }
 
-    &:not(.endpoint):focus {
+    &:not(.endpoint):focus, &:not(.endpoint):focus-visible {
         box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.24);
         background-color: #126dc1;
         color: #fff;
+        border-radius: 30px !important;
     }
 
     &.endpoint {
